--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^23.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^2.2.1",
     "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-i18next": "^7.8.3",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
